Finalização da persistencia Sql

--- a/Escola/App.config
+++ b/Escola/App.config
@@ -2,5 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="caminho_json" value="C:\Users\danil\alunos.json"/>
+		<add key="conexao_sql" value="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Escola;Data Source=LAPTOP-5N5CQON6\SQLEXPRESS"/>
 	</appSettings>
 </configuration>
